force-app/main/default/objects/Sales_Org__c/Sales_Org__c.object-meta.xml
<CustomObject>
    <description>Contains all of the applicable NCR sales organizations</description>
    <label>Sales Org</label>
    <nameField>
        <label>Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Org</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>