force-app/main/default/objects/Sales_Org__c/fields/Corporate_Name__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Name__c</fullName>
    <description>RoR sales org code name from Trident</description>
    <label>Corporate Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>