force-app/main/default/objects/Sales_Org__c/fields/DCode_7__c.field-meta.xml
<CustomField>
    <fullName>DCode_7__c</fullName>
    <label>DCode 7</label>
    <length>10</length>
    <type>Text</type>
</CustomField>