force-app/main/default/objects/Sales_Org__c/fields/DCode_8__c.field-meta.xml
<CustomField>
    <fullName>DCode_8__c</fullName>
    <label>DCode 8</label>
    <length>10</length>
    <type>Text</type>
</CustomField>