force-app/main/default/objects/Sales_Org__c/fields/Functional_Group__c.field-meta.xml
<CustomField>
    <fullName>Functional_Group__c</fullName>
    <label>Functional Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>