force-app/main/default/objects/Sales_Org__c/fields/Hierarchy_10__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_10__c</fullName>
    <label>Hierarchy 10</label>
    <length>100</length>
    <type>Text</type>
</CustomField>