force-app/main/default/objects/Sales_Org__c/fields/Hierarchy_3__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_3__c</fullName>
    <label>Hierarchy 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>