force-app/main/default/objects/Sales_Org__c/fields/Hierarchy_4__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_4__c</fullName>
    <label>Hierarchy 4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>