force-app/main/default/objects/Sales_Org__c/fields/Industry_Channel__c.field-meta.xml
<CustomField>
    <fullName>Industry_Channel__c</fullName>
    <label>Industry Channel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>