force-app/main/default/objects/Sales_Org__c/fields/Solution_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Solution_Portfolio__c</fullName>
    <label>Offer Portfolio</label>
    <length>2</length>
    <type>Text</type>
</CustomField>